--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "homepage": "https://github.com/MisterDaniels/phaser-mmorpg-front#readme",
     "dependencies": {
         "@popperjs/core": "^2.10.2",
+        "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "celebrate": "^15.0.0",
         "cookie-parser": "^1.4.5",
